--- a/my-module-api/pom.xml
+++ b/my-module-api/pom.xml
@@ -8,5 +8,8 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>my-module-api</artifactId>
 
+    <build>
+    <sourceDirectory>com.my.module.hello.api</sourceDirectory>
+  </build>
   
  </project>
